# altair-lab-builder-ms

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
examples/basic-terminal-lab/: Dockerfile
examples/basic-terminal-lab/app/: start.sh
scripts/: test_local_flow.sh
src/: error.rs  main.rs
src/models/: api.rs  build.rs  mod.rs  source_bundle.rs  state.rs
src/routes/: builds.rs  health.rs  mod.rs  source_bundles.rs
src/services/: builds.rs  file_policy.rs  mod.rs  path_safety.rs  source_bundles.rs
src/tests/: mod.rs
